force-app/main/default/objects/Event_Attendee__c/Event_Attendee__c.object-meta.xml
<CustomObject>
    <label>Event Attendee</label>
    <pluralLabel>Event Attendees</pluralLabel>
    <description>The people an imported list is about. R5 makes this the only thing Screen 1 writes: an attendee is a person we have on a list, held on our own object, created without reference to any Account, Contact or Lead. One row per person, reused across every event — the link to an event is Event_Invitee__c, so inviting the same person to three events is three invitee rows against one attendee. ★R8 An attendee may afterwards be linked to a Contact via Contact__c, but only by a reconciliation run: the import still creates them knowing nothing about the org&apos;s own data, which is what keeps it safe to run against a populated org.</description>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <!--
      Read/Write, and that is load-bearing rather than lazy. An event is shared: any
      AM may invite anyone on the imported list, and an approver has to be able to
      read the person they are deciding on. The old model got this from Account
      sharing; with no Account there is nothing to inherit from, so the object says
      it outright. Tightening this is a production lever, but it cannot be tightened
      without giving AMs some other route to each other's attendees.
    -->
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>