force-app/main/default/objects/Event_Attendee__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <description>★R8 SEIM_PERSON.ADDR. One field, not five, matching the reference ERD. A custom object has no compound address type, so the alternative was inventing street / city / state / postcode / country columns the source data does not separate — that would produce five mostly-empty fields and a false promise that the address is structured enough to sort or map on. Text Area rather than Long Text so it stays usable in report filters.</description>
    <type>TextArea</type>
</CustomField>