force-app/main/default/objects/Event_Attendee__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <description>Free text, and no lookup to Account by design — that is the whole point of R5. A bank, a university and a newspaper all land here on equal terms, and none of them becomes a customer record. Grouping in the selector is by this text, so two spellings of one organisation group separately.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>