force-app/main/default/objects/Event_Attendee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <description>Optional, and deliberately not unique. Conference lists carry shared inboxes and rows with no address at all; making this the identity is what R4 moved away from. It is one of the four parts of Unique_Key__c instead.</description>
    <type>Email</type>
</CustomField>