force-app/main/default/objects/Event_Attendee__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>First Name</label>
    <description>As it appeared in the uploaded file. Kept apart from the Name field so a list can be sorted and searched on the parts, not only on the assembled string.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>