force-app/main/default/objects/Event_Attendee__c/fields/Imported_On__c.field-meta.xml
<CustomField>
    <fullName>Imported_On__c</fullName>
    <label>Imported On</label>
    <description>When this attendee was last seen in an uploaded file. Set by Apex rather than defaulted, so a re-import refreshes it — paired with Source_File__c it says which upload the current values came from.</description>
    <type>DateTime</type>
</CustomField>