force-app/main/default/objects/Event_Attendee__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last Name</label>
    <description>Required: a row with no last name has no identity, and the import skips it rather than creating an attendee nobody can recognise later.</description>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>