force-app/main/default/objects/Event_Attendee__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>Mobile</label>
    <description>As the file gave it. Never validated or normalised — an event list is not a dialling system, and reformatting numbers we did not collect would only invent precision.</description>
    <type>Phone</type>
</CustomField>