force-app/main/default/objects/Event_Attendee__c/fields/Other_Language_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Other_Language_Job_Title__c</fullName>
    <label>Other Language Job Title</label>
    <description>★R8 SEIM_PERSON.OTHER_LANG_JOB_TITLE. The job title in the same script as Other_Language_Name__c. Person-level and live: unlike the invitee&apos;s snapshot of Title__c, this one is not frozen at invite time, because no approval decision is made on it.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>