force-app/main/default/objects/Event_Attendee__c/fields/Source_File__c.field-meta.xml
<CustomField>
    <fullName>Source_File__c</fullName>
    <label>Source File</label>
    <description>Name of the uploaded file this attendee last came in on. Overwritten by a later import of the same person, so it answers &quot;where did this record last come from&quot; rather than &quot;every file they ever appeared in&quot;.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>