force-app/main/default/objects/Event_Attendee__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <description>Job title as the file gave it. R4 parsed this column and then threw it away, because it had nowhere to put it that was not a Contact. It has somewhere now.</description>
    <type>Text</type>
    <length>128</length>
</CustomField>