force-app/main/default/objects/Event_Attendee__c/fields/Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone__c</fullName>
    <label>Work Phone</label>
    <description>★R8 SEIM_PERSON.WORK_PHONE_NO. Kept alongside Mobile__c rather than replacing it: the reference ERD carries only a work number and the current CSV carries only a mobile, so collapsing them would lose whichever column the next source file happens to have. Never validated or normalised, for the same reason Mobile__c is not.</description>
    <type>Phone</type>
</CustomField>